# adsloty

./: README.md
backend/: Cargo.toml
backend/.sqlx/: query-0023cc6335e1ba7dd9a9f8a33d4864a207d043616d91a2eac50953f9f444588a.json  query-01edc4750ded4216f967b46cfdd2bd7f0e67015da2cd8910edcb2982c10a5338.json  query-087d7f6af34295756b642916db2f45ce5cba4a0badbf232f2c8e5d8d7ed9cf80.json  query-0d52a1b3ae5c782814332ba9ab2b9870ebe8b07fffdfff728fed673fb6c759cd.json  query-108f6c52de18594e186df8804fda11c1390f92d52dee10cc80424699b7ffbd62.json  query-122fe8023a84a289f6582190d73a7cbec7bbe070fee201882ba06d688f5d46d4.json  query-14f11c2ff068237f26d9011240de9cb4eff31281dfb72f2b8062e60ebb6d845b.json  query-2b309253da339a1e566a6e50067d15286815471970d89aee5bfc2b0f807298f8.json  query-2da0dea64f8802b27b68a2220926b239c7ac5064a692b1d7f57dcb30ab5ddbe9.json  query-2f0d77e45dfdce33a9e5e5353194fd95eea242bcf77e9da6cc18b12b487bfe88.json  query-3f6546b856c37f577c1682cae031e833e4ba4b87f9a7c960e059ddb253eff8ea.json  query-42a01265e3dd15797644feb7f89212ad4d8367af0cb76ad1fa40051374392ed3.json  query-57b3030565134891f6170ac59e0e08911227bdd181b1f0e53614d5d19fd38f6f.json  query-5ded09a358f7c90c9f1cf3449cd217dee89889410728353dc78c12f16e30a1db.json  query-620cb3bd04e66605ad2c88f8ee272ca8b6365c090c4ca9fa0fcc0a17bd6d3e4e.json  query-6229297ad823eeaffb8d70ba5a97c20a7154c00c07dc5a0d92d13c9e7cce1526.json  query-65b4dc06f29f0b78a9e62e685f61e0f931367ea6690261a589d0cb32a3e5df1e.json  query-71d87e74fa388d61133aa8220c927c756678d2755d29ef70108878a9cb262bb6.json  (+18 more)
backend/migrations/: 0001_initial_schema.sql  (+1 more)
(+131 files in other folders)
