[package]
name = "adsloty"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1"
axum = { version = "0.8.8", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15"
governor = "0.10"
hex = "0.4"
hmac = "0.12"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
lettre = { version = "0.11", features = [
  "builder",
  "smtp-transport",
  "tokio1-native-tls"
] }
rand = "0.8"
reqwest = { version = "0.12.28", features = ["json", "multipart"] }
rust_decimal = { version = "1.36", features = ["db-postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sha1 = "0.10"
sha2 = "0.10"
sqlx = { version = "0.8.6", features = [
  "chrono",
  "migrate",
  "postgres",
  "runtime-tokio",
  "rust_decimal",
  "tls-native-tls",
  "uuid"
] }
thiserror = "2.0"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower_governor = "0.8"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["serde", "v7"] }
